<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<url>https://www.cubetree.com/c/jamatsap.com/groups/about_page/515599</url>
	<prerequisites>
		<maven>3.0.4</maven>
	</prerequisites>
	<groupId>net.sf.sap.jxls</groupId>
	<artifactId>jxls-core</artifactId>
	<packaging>jar</packaging>
	<version>1.2.0-SNAPSHOT</version>
	<name>jxls-core</name>
	<description>
   		SAP Upgraded jxls-core by I071944
 	</description>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.build.resourceEncoding>UTF-8</project.build.resourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<product.name>SAP Anywhere OCC</product.name>
		<maven.test.skip>false</maven.test.skip>
		<java.version>1.8</java.version>
		<antrun.version>1.7</antrun.version>
		<surefire.version>2.18.1</surefire.version>
		<clean.version>2.5</clean.version>
		<compiler.version>3.1</compiler.version>
		<deploy.version>2.7</deploy.version>
		<install.version>2.4</install.version>
		<resource.version>2.6</resource.version>
		<war.version>2.3</war.version>
		<jar.version>2.4</jar.version>
		<maven.plugin.version>3.0.4</maven.plugin.version>
		<maven.source.plugin.version>2.2.1</maven.source.plugin.version>
		<assembly.version>2.4</assembly.version>
		<pitest.version>1.1.10</pitest.version>
		<!-- Dependency version control -->
		<ant.version>1.7.0</ant.version>
		<occ.plugin.version>${project.version}</occ.plugin.version>
		<commons.codec.version>1.6</commons.codec.version>
		<commons.collections.version>3.2.2</commons.collections.version>
		<poi.version>3.17</poi.version>
		<junit.parallel.type>none</junit.parallel.type>
		<junit.parallel.threadCount>1</junit.parallel.threadCount>
	</properties>

	<dependencies>
		<dependency>
			<groupId>net.sf.opencsv</groupId>
			<artifactId>opencsv</artifactId>
			<version>2.3</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>commons-logging</groupId>
			<artifactId>commons-logging</artifactId>
			<version>1.2</version>
		</dependency>
		<dependency>
			<groupId>commons-beanutils</groupId>
			<artifactId>commons-beanutils</artifactId>
			<version>1.9.3</version>
		</dependency>
		<dependency>
			<groupId>commons-collections</groupId>
			<artifactId>commons-collections</artifactId>
			<version>3.2.2</version>
		</dependency>
		<dependency>
			<groupId>commons-digester</groupId>
			<artifactId>commons-digester</artifactId>
			<version>2.1</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-jexl</artifactId>
			<version>2.1.1</version>
		</dependency>
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi</artifactId>
			<version>${poi.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi-ooxml</artifactId>
			<version>${poi.version}</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>hsqldb</groupId>
			<artifactId>hsqldb</artifactId>
			<version>1.8.0.10</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<artifactId>maven-plugin-plugin</artifactId>
					<version>2.3</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>${compiler.version}</version>
					<configuration>
						<source>${java.version}</source>
						<encoding>${project.build.sourceEncoding}</encoding>
						<target>${java.version}</target>
						<showDeprecation>true</showDeprecation>
						<showWarnings>true</showWarnings>
						<verbose>true</verbose>
						<fork>true</fork>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>${resource.version}</version>
					<configuration>
						<encoding>${project.build.resourceEncoding}</encoding>
					</configuration>
				</plugin>
				<plugin>
					<artifactId>maven-war-plugin</artifactId>
					<version>${war.version}</version>
					<configuration>
						<archive>
							<manifestEntries>
								<Component-Version>${occ.component.version}</Component-Version>
							</manifestEntries>
						</archive>
					</configuration>
					<executions>
						<execution>
							<id>add-manifest</id>
							<goals>
								<goal>manifest</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<artifactId>maven-clean-plugin</artifactId>
					<version>${clean.version}</version>
				</plugin>
				<plugin>
					<artifactId>maven-install-plugin</artifactId>
					<version>${install.version}</version>
				</plugin>
				<plugin>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>${deploy.version}</version>
				</plugin>
				<plugin>
					<artifactId>maven-jar-plugin</artifactId>
					<version>${jar.version}</version>
					<configuration>
						<classesDirectory>${project.build.directory}/classes</classesDirectory>
						<archive>
							<manifestEntries>
								<Component-Version>${occ.component.version}</Component-Version>
							</manifestEntries>
						</archive>
					</configuration>
					<executions>
						<execution>
							<goals>
								<goal>test-jar</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>${surefire.version}</version>
					<inherited>true</inherited>
					<configuration>
						<argLine>-server -ea -XX:-UseSplitVerifier -XX:PermSize=512m
							-XX:MaxPermSize=1g -Xmx2g -XX:+HeapDumpOnOutOfMemoryError</argLine>
						<parallel>${junit.parallel.type}</parallel>
						<threadCount>${junit.parallel.threadCount}</threadCount>
						<reportFormat>plain</reportFormat>
						<skipTests>${maven.test.skip}</skipTests>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-antrun-plugin</artifactId>
					<version>${antrun.version}</version>
				</plugin>
				<plugin>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>${assembly.version}</version>
					<configuration>
						<archive>
							<manifestEntries>
								<Component-Version>${occ.component.version}</Component-Version>
							</manifestEntries>
						</archive>
					</configuration>
				</plugin>
				<plugin>
					<groupId>au.com.alderaan</groupId>
					<artifactId>eclipselink-staticweave-maven-plugin</artifactId>
					<version>${eclipselink.weave.plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>de.empulse.eclipselink</groupId>
					<artifactId>staticweave-maven-plugin</artifactId>
					<version>${eclipselink.staticweave.plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>com.sap.sbo.occ.tool.build</groupId>
					<artifactId>build-helper</artifactId>
					<version>${project.version}</version>
				</plugin>
				<plugin>
					<groupId>com.sap.sbo.occ.tool</groupId>
					<artifactId>sld-tools</artifactId>
					<version>${occ.plugin.version}</version>
				</plugin>
				<!--This plugin's configuration is used to store Eclipse m2e settings 
					only. It has no influence on the Maven build itself. -->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.apache.maven.plugins</groupId>
										<artifactId>maven-plugin-plugin</artifactId>
										<versionRange>[2.3,)</versionRange>
										<goals>
											<goal>descriptor</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore />
									</action>
								</pluginExecution>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.apache.maven.plugins</groupId>
										<artifactId>maven-antrun-plugin</artifactId>
										<versionRange>[1.7,)</versionRange>
										<goals>
											<goal>run</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore />
									</action>
								</pluginExecution>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>au.com.alderaan</groupId>
										<artifactId>eclipselink-staticweave-maven-plugin</artifactId>
										<versionRange>[1.0.3,)</versionRange>
										<goals>
											<goal>weave</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore />
									</action>
								</pluginExecution>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>de.empulse.eclipselink</groupId>
										<artifactId>staticweave-maven-plugin</artifactId>
										<versionRange>[1.0.0,)</versionRange>
										<goals>
											<goal>weave</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore />
									</action>
								</pluginExecution>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>com.sap.sbo.occ.tool.build</groupId>
										<artifactId>build-helper</artifactId>
										<versionRange>[0.1.0-SNAPSHOT,)</versionRange>
										<goals>
											<goal>generate-compound-js</goal>
											<goal>generate-service-js</goal>
											<goal>flag</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore />
									</action>
								</pluginExecution>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>com.sap.sbo.tool</groupId>
										<artifactId>sld-tools</artifactId>
										<versionRange>[0.1.0-SNAPSHOT,)</versionRange>
										<goals>
											<goal>crypto</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore />
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-eclipse-plugin</artifactId>
					<version>2.8</version>
					<configuration>
						<additionalProjectnatures>
							<projectnature>org.springframework.ide.eclipse.core.springnature</projectnature>
						</additionalProjectnatures>
						<additionalBuildcommands>
							<buildcommand>org.springframework.ide.eclipse.core.springbuilder</buildcommand>
						</additionalBuildcommands>
						<downloadSources>true</downloadSources>
						<downloadJavadocs>false</downloadJavadocs>
						<wtpversion>1.6</wtpversion>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<encoding>${project.build.sourceEncoding}</encoding>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<showWarnings>true</showWarnings>
					<showDeprecation>true</showDeprecation>
					<verbose>true</verbose>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>${maven.source.plugin.version}</version>
				<inherited>true</inherited>
				<executions>
					<execution>
						<id>attach-sources</id>
						<phase>verify</phase>
						<goals>
							<goal>jar-no-fork</goal>
							<goal>test-jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>build-helper-maven-plugin</artifactId>
				<version>1.8</version>
				<executions>
					<execution>
						<id>remove-old-installers</id>
						<goals>
							<goal>remove-project-artifact</goal>
						</goals>
						<configuration>
							<removeAll>true</removeAll>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.pitest</groupId>
				<artifactId>pitest-maven</artifactId>
				<version>${pitest.version}</version>
				<configuration>
					<targetClasses>
						<param>com.sap.*</param>
					</targetClasses>
					<targetTests>
						<param>com.sap.*</param>
					</targetTests>
					<jvmArgs>
						<value>-server</value>
						<value>-ea</value>
						<value>-XX:PermSize=1g</value>
						<value>-XX:MaxPermSize=2g</value>
						<value>-Xmx4g</value>
						<value>-XX:ReservedCodeCacheSize=512m</value>
						<value>-XX:-UseSplitVerifier</value>
					</jvmArgs>
					<avoidCallsTo>
						<avoidCallsTo>java.util.logging</avoidCallsTo>
						<avoidCallsTo>org.apache.log4j</avoidCallsTo>
						<avoidCallsTo>org.slf4j</avoidCallsTo>
						<avoidCallsTo>org.apache.commons.logging</avoidCallsTo>
					</avoidCallsTo>
					<excludedClasses>
						<param>*$*</param>
						<param>com.sap.sme.mdi.poi2.*</param>
						<param>com.sap.sbo.metadata.UIMetadataChecker</param>
						<param>com.sap.sme.occ.ana.dashboard.test.*</param>
						<param>com.sap.sme.occ.ana.dashboard.transformer.*</param>
						<param>com.sap.sme.occ.app.test.*</param>
						<param>com.sap.ana.dashboard.test.*</param>
						<param>com.sap.sbo.dbtools.patches.UpgradeMainTest</param>
					</excludedClasses>
					<outputFormats>
						<outputFormat>XML</outputFormat>
						<outputFormat>HTML</outputFormat>
					</outputFormats>
				</configuration>
			</plugin>
		</plugins>
		<resources>
			<resource>
				<directory>src/main/java</directory>
				<filtering>false</filtering>
				<includes>
					<include>**/*.properties</include>
				</includes>
			</resource>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>false</filtering>
				<includes>
					<include>**/*.*</include>
				</includes>
			</resource>
		</resources>
		<testResources>
			<testResource>
				<directory>src/test/java</directory>
				<filtering>false</filtering>
				<includes>
					<include>**/*.properties</include>
				</includes>
			</testResource>
			<testResource>
				<directory>src/test/resources</directory>
			</testResource>
		</testResources>
	</build>

	<organization>
		<name>${product.name}</name>
		<url>https://www.cubetree.com/c/jamatsap.com/groups/about_page/515599</url>
	</organization>
	<scm>
		<url>${scm.root}</url>
	</scm>
	<issueManagement>
		<system>JIRA</system>
		<url>http://ubtjira.pvgl.sap.corp:8080</url>
	</issueManagement>
	<ciManagement>
		<system>Jenkins</system>
		<url>http://10.58.7.109:8080/view/build_B1OD_W3/</url>
	</ciManagement>
	<profiles>
		<profile>
			<id>local-repo</id>
			<repositories>
				<repository>
					<id>releases</id>
					<name>B1 ANW Release Repository</name>
					<url>http://cnpvgvb1od091.pvgl.sap.corp:8081/nexus/content/groups/allrepository</url>
					<releases>
						<enabled>true</enabled>
						<updatePolicy>never</updatePolicy>
					</releases>
					<snapshots>
						<enabled>false</enabled>
					</snapshots>
				</repository>
				<repository>
					<id>snapshots</id>
					<name>B1 ANW Snapshot Repository</name>
					<url>http://cnpvgvb1od091.pvgl.sap.corp:8081/nexus/content/groups/allrepository</url>
					<releases>
						<enabled>true</enabled>
						<updatePolicy>never</updatePolicy>
					</releases>
					<snapshots>
						<enabled>true</enabled>
						<updatePolicy>always</updatePolicy>
					</snapshots>
				</repository>
			</repositories>
			<distributionManagement>
				<repository>
					<id>releases</id>
					<url>http://cnpvgvb1od091.pvgl.sap.corp:8081/nexus/content/repositories/releases</url>
				</repository>
				<snapshotRepository>
					<id>snapshots</id>
					<url>http://cnpvgvb1od091.pvgl.sap.corp:8081/nexus/content/repositories/snapshots</url>
				</snapshotRepository>
			</distributionManagement>
		</profile>
		<profile>
			<id>no-ut</id>
			<activation>
				<property>
					<name>ldi.releaseBuild</name>
				</property>
			</activation>
			<properties>
				<maven.test.skip>true</maven.test.skip>
			</properties>
		</profile>
		<profile>
			<id>staging-deploy</id>
			<activation>
				<property>
					<name>staging-deploy</name>
					<value>true</value>
				</property>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.sonatype.plugins</groupId>
						<artifactId>nexus-staging-maven-plugin</artifactId>
						<version>1.6.5</version>
						<extensions>true</extensions>
						<configuration>
							<serverId>snapshots</serverId>
							<nexusUrl>http://cnpvgvb1od091.pvgl.sap.corp:8081/nexus/</nexusUrl>
							<skipRemoteStaging>true</skipRemoteStaging>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>
